--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ fastapi>=0.110
 uvicorn[standard]>=0.24
 qdrant-client>=1.8
 psycopg[binary]>=3.1
+httpx>=0.27
 pytest>=7.4
+pytest-asyncio>=0.23
 google-cloud-bigquery>=3.14
 # Optional: for parallel embedding generation with PySpark
 # pyspark>=3.5
