--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,13 @@ uvicorn[standard]>=0.24
 qdrant-client>=1.8
 psycopg[binary]>=3.1
 httpx>=0.27
+numpy>=1.24.0
+scipy>=1.11.0
 pytest>=7.4
 pytest-asyncio>=0.23
 google-cloud-bigquery>=3.14
 # Optional: for parallel embedding generation with PySpark
 # pyspark>=3.5
+
+streamlit>=1.39
 
